Added the ability to symmetrically encrypt text via OpenPGP.js.

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,10 @@ section#page {
     margin: 0 auto;
     padding: 20px;
 }
+
+textarea#gpgTextBox {
+    height: 300px;
+    width: 100%;
+    min-width: 300px;
+    max-height: 800px;
+}
